Basic clickable SVG sections on map

--- a/map/index.html
+++ b/map/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width" initial-scale="1.0">
 	<title>Gallery Map | Imaginary Gallery</title>
-	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" type="text/css" href="/styles/common.css">
-    <link rel="stylesheet" type="text/css" href="map-style.css">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+	<link rel="stylesheet" type="text/css" href="/styles/common.css">
+	<link rel="stylesheet" type="text/css" href="map-style.css">
 </head>
+
 <body>
 	<link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
 	<div id="menu" class="closed">
@@ -23,7 +25,7 @@
 				<li><a href="/map" class="ig-link">Map</a></li>
 				<li><a href="/whats-on" class="ig-link">What's on</a></li>
 				<li><a href="/about" class="ig-link">About</a></li>
-			</ul>	
+			</ul>
 		</div>
 	</div>
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
@@ -32,7 +34,49 @@
 		<h1>Map</h1>
 	</div>
 	<div class="map-container">
-		<img src="29-12-21-map.png" id="map-background" alt="A fantastic building with strangely shaped rooms">
+		<div class="map-background"></div>
+		<!-- <img src="29-12-21-map.png" id="map-background" alt="A fantastic building with strangely shaped rooms"> -->
+		<div class="map-overlay">
+			<svg fill="none" fill-rule="evenodd" stroke="black" stroke-width="0.501" stroke-linejoin="bevel"
+				stroke-miterlimit="10" font-family="Times New Roman" font-size="16" style="font-variant-ligatures:none"
+				xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" version="1.1"
+				overflow="visible" width="145vh" height="100vh" viewBox="0 -2016 2920.5 2016">
+				<g id="Layer 1" transform="scale(1 -1)">
+					<a href="/reflections/reflection1.html">
+						<path class="map-room-section" id="section1"
+							d="M 1286.96,1498.84 L 1326.56,1436.44 L 1368.56,1377.64 L 1410.56,1312.84 L 1444.16,1263.64 L 1477.76,1210.84 L 1504.16,1166.44 L 1525.76,1135.24 L 1549.76,1094.44 L 1566.56,1064.44 L 1570.16,1047.64 L 1573.76,1026.04 L 1560.56,972.038 L 1543.76,898.838 L 1511.36,805.238 L 1476.56,728.438 L 1459.76,676.838 L 1446.56,640.838 L 1387.76,672.038 L 1344.56,690.038 L 1289.36,688.838 L 1220.96,694.838 L 1152.56,697.238 L 1105.76,697.238 L 1068.56,682.838 L 1054.16,678.038 L 1019.36,802.838 L 1012.16,853.238 L 1006.16,865.238 L 986.962,882.038 L 923.362,921.638 L 869.362,958.838 L 824.962,987.638 L 791.362,1011.64 L 768.562,1074.04 L 746.962,1132.84 L 748.162,1179.64 L 752.962,1284.04 L 773.362,1334.44 L 803.362,1380.04 L 833.362,1412.44 L 884.962,1429.24 L 930.562,1448.44 L 982.162,1466.44 L 1020.56,1477.24 L 1064.96,1482.04 L 1126.16,1486.84 L 1189.76,1492.84 L 1286.96,1498.84 Z"
+							fill="#fffc00" stroke="none" stroke-linejoin="miter" marker-start="none"
+							marker-end="none" />
+					</a>
+					<a href="/gallery-hang/">
+						<path class="map-room-section" id="section2"
+							d="M 1326.56,1436.44 L 1368.56,1377.64 L 1410.56,1312.84 L 1444.16,1263.64 L 1477.76,1210.84 L 1504.16,1166.44 L 1525.76,1135.24 L 1549.76,1094.44 L 1566.56,1064.44 L 1570.16,1047.64 L 1573.76,1026.04 L 1560.56,972.038 L 1543.76,898.838 L 1511.36,805.238 L 1476.56,728.438 L 1459.76,676.838 L 1446.56,640.838 L 1464.56,633.638 L 1513.76,715.238 L 1561.76,782.438 L 1610.96,820.838 L 1672.16,842.438 L 1766.96,870.038 L 1817.36,885.638 L 1874.96,897.638 L 1940.96,898.838 L 2010.56,897.638 L 2083.84,892.894 L 2128.09,878.644 L 2186.59,857.644 L 2257.84,837.394 L 2259.34,849.394 L 2246.59,889.894 L 2221.09,940.144 L 2189.59,978.393 L 2158.09,1023.39 L 2121.34,1074.39 L 2074.84,1140.39 L 2014.09,1216.14 L 1965.34,1256.64 L 1915.09,1297.89 L 1852.09,1346.64 L 1790.59,1376.64 L 1726.09,1417.89 L 1670.59,1442.64 L 1569.34,1464.39 L 1492.09,1484.64 L 1423.09,1498.14 L 1363.84,1503.39 L 1315.09,1510.14 L 1287.04,1498.81 L 1326.56,1436.44 Z"
+							fill="#00ff03" stroke="none" stroke-linejoin="miter" marker-start="none"
+							marker-end="none" />
+					</a>
+					<a href="/">
+						<path class="map-room-section" id="section3"
+							d="M 2257.84,837.394 L 2310.28,815.719 L 2348.08,794.719 L 2387.68,768.919 L 2421.88,741.319 L 2421.28,733.519 L 2411.08,692.119 L 2394.28,633.919 L 2366.68,570.319 L 2332.48,510.319 L 2300.68,462.319 L 2267.08,434.719 L 2220.28,410.719 L 2152.48,388.519 L 2072.08,380.119 L 1998.88,387.319 L 1929.28,399.319 L 1890.88,412.519 L 1758.88,475.519 L 1685.68,515.119 L 1620.28,543.919 L 1538.68,590.719 L 1464.56,633.638 L 1513.76,715.238 L 1561.76,782.438 L 1610.96,820.838 L 1672.16,842.438 L 1766.96,870.038 L 1817.36,885.638 L 1874.96,897.638 L 1940.96,898.838 L 2010.56,897.638 L 2083.84,892.894 L 2128.09,878.644 L 2186.59,857.644 L 2257.84,837.394 Z"
+							stroke="none" stroke-linejoin="miter" fill="#ff00fc" marker-start="none"
+							marker-end="none" />
+					</a>
+					<a href="/cave">
+						<path class="map-room-section" id="section4"
+							d="M 1464.56,633.638 L 1447.42,641.056 L 1408.07,661.216 L 1344.7,689.056 L 1288.07,688.576 L 1217.99,695.296 L 1104.23,696.736 L 1055.27,678.016 L 1040.42,684.007 L 1017.17,681.757 L 937.67,681.757 L 842.795,677.257 L 772.671,678.382 L 716.796,680.632 L 651.921,691.132 L 572.047,709.882 L 509.422,754.507 L 482.422,775.507 L 482.047,771.382 L 482.047,748.507 L 489.172,704.632 L 505.297,658.507 L 519.547,629.257 L 540.547,595.132 L 568.672,569.258 L 595.671,548.258 L 626.421,533.258 L 675.171,519.758 L 758.046,511.508 L 804.921,514.133 L 856.295,513.758 L 901.67,514.133 L 946.295,512.633 L 1000.3,513.008 L 1055.05,518.258 L 1130.79,519.008 L 1158.54,518.633 L 1173.54,521.258 L 1196.42,521.633 L 1227.54,517.883 L 1257.17,510.758 L 1289.42,498.008 L 1333.67,480.008 L 1384.67,453.383 L 1446.54,419.258 L 1493.79,394.883 L 1545.92,367.883 L 1586.04,351.008 L 1620.17,332.258 L 1662.54,310.134 L 1711.55,286.568 L 1737.47,275.048 L 1770.59,261.608 L 1814.27,239.768 L 1861.79,217.448 L 1907.39,201.368 L 1986.11,180.008 L 2032.91,176.168 L 2088.11,173.768 L 2142.11,173.048 L 2186.03,177.848 L 2228.27,186.968 L 2281.31,199.928 L 2326.91,221.048 L 2379.23,251.528 L 2428.67,282.968 L 2452.67,302.168 L 2478.59,327.608 L 2501.39,361.928 L 2524.43,404.168 L 2536.43,431.048 L 2552.41,464.633 L 2576.41,519.383 L 2588.41,564.383 L 2594.41,626.257 L 2591.04,681.382 L 2590.29,738.757 L 2586.54,767.257 L 2580.16,802.882 L 2572.29,832.882 L 2561.79,888.006 L 2552.41,919.881 L 2538.16,963.381 L 2527.66,992.256 L 2482.16,1063.24 L 2454.56,1099.24 L 2411.36,1146.04 L 2362.16,1192.84 L 2312.96,1227.64 L 2334.56,1184.44 L 2363.08,1134.32 L 2387.08,1055.12 L 2411.68,983.119 L 2433.88,865.519 L 2436.88,797.719 L 2421.88,741.319 L 2421.28,733.519 L 2411.08,692.119 L 2394.28,633.919 L 2366.68,570.319 L 2332.48,510.319 L 2300.68,462.319 L 2267.08,434.719 L 2220.28,410.719 L 2152.48,388.519 L 2072.08,380.119 L 1998.88,387.319 L 1929.28,399.319 L 1890.88,412.519 L 1758.88,475.519 L 1685.68,515.119 L 1620.28,543.919 L 1538.68,590.719 L 1464.56,633.638 Z"
+							stroke-width="0.75" stroke-linejoin="round" stroke-linecap="round" fill="#0002bf"
+							marker-start="none" marker-end="none" />
+					</a>
+					<a href="/tapestry/">
+						<path class="map-room-section" id="section5"
+							d="M 1055.27,678.016 L 1040.42,684.007 L 1017.17,681.757 L 937.67,681.757 L 842.795,677.257 L 772.671,678.382 L 716.796,680.632 L 651.921,691.132 L 572.047,709.882 L 509.422,754.507 L 482.422,775.507 L 437.218,845.32 L 414.718,914.321 L 392.218,987.822 L 390.718,1091.32 L 404.218,1239.83 L 453.719,1355.33 L 519.72,1470.83 L 638.221,1571.33 L 741.723,1634.33 L 881.225,1683.83 L 1008.73,1718.33 L 1089.73,1725.83 L 1202.23,1733.33 L 1338.73,1725.83 L 1452.73,1709.33 L 1535.23,1688.33 L 1668.74,1644.83 L 1797.74,1608.83 L 1868.24,1571.33 L 1961.24,1529.33 L 2037.74,1470.83 L 2130.74,1404.83 L 2223.74,1334.33 L 2292.75,1253.33 L 2314.3,1225.69 L 2345.98,1163.78 L 2361.82,1133.54 L 2381.02,1072.1 L 2411.74,983.296 L 2426.62,897.376 L 2431.9,876.256 L 2433.82,865.216 L 2438.14,798.016 L 2420.86,744.256 L 2358.46,788.416 L 2287.9,826.816 L 2260.54,836.896 L 2247.58,884.896 L 2223.1,940.576 L 2164.54,1012.58 L 2033.5,1194.02 L 2003.74,1227.62 L 1883.74,1323.62 L 1853.02,1347.13 L 1788.7,1377.86 L 1731.58,1415.3 L 1673.5,1443.13 L 1553.02,1470.02 L 1479.58,1488.26 L 1383.11,1503.13 L 1315.9,1511.3 L 1286.62,1499.3 L 1025.51,1481.06 L 833.985,1415.3 L 792.705,1367.3 L 772.545,1335.62 L 750.465,1283.78 L 744.705,1137.38 L 788.865,1012.1 L 1002.95,867.136 L 1010.14,852.736 L 1017.35,801.376 L 1055.27,678.016 Z"
+							fill="#ff8200" stroke-width="0.75" stroke-linejoin="round" stroke-linecap="round"
+							marker-start="none" marker-end="none" />
+
+					</a>
+				</g>
+			</svg>
+		</div>
 	</div>
 </body>
+
 </html>
