Add "back to entrance" link on menu

--- a/about/index.html
+++ b/about/index.html
@@ -24,6 +24,9 @@
 				<li><a href="/whats-on" class="ig-link">What's on</a></li>
 				<li><a href="/about" class="ig-link">About</a></li>
 			</ul>
+			<div class="menu-section">
+				<a href="/" class="ig-link menu-mini-link">Back to entrance</a>
+			</div>
 		</div>
 	</div>
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
@@ -47,7 +50,7 @@
 				class="ig-link">click here</a>. For now,
 			please feel free to explore the gallery - the space is yours!</p>
 
-		<a href="/gallery-hang" class="ig-link ig-room-link ig-next-room ig-alt-link">
+		<a href="/cave" class="ig-link ig-room-link ig-next-room ig-alt-link">
 			Visit the gallery
 			<img src="/graphics/arrows/arrowblue.png" alt="This way" class="ig-room-arrow">
 		</a>
