--- a/whats-on/index.html
+++ b/whats-on/index.html
@@ -22,7 +22,10 @@
 				<li><a href="/map" class="ig-link">Map</a></li>
 				<li><a href="/whats-on" class="ig-link">What's on</a></li>
 				<li><a href="/about" class="ig-link">About</a></li>
-			</ul>	
+			</ul>
+			<div class="menu-section">
+				<a href="/" class="ig-link menu-mini-link">Back to entrance</a>
+			</div>
 		</div>
 	</div>
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
