Add close button to close artwork overlays

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -52,6 +52,7 @@
                     <p>Although you may be looking at Artwork #1 and thinking "Wow, that is such a great artwork", you
                         should really see artwork #2. It's way better than Artwork #1 in basically every way.</p>
                 </div>
+                <div class="artwork-close-button">(X)</div>
             </div>
 
             <div class="artwork-hang" style="left: 500px; top: 50px;" onclick="onArtworkClicked(event)">
@@ -66,6 +67,7 @@
                     <p>Artwork #2 is a beautiful work of art by a very complicated artist who is very smart and full of
                         brains and creativity.</p>
                 </div>
+                <div class="artwork-close-button">(X)</div>
             </div>
 
 
