Updated 'About Page' text
Re-worded sentence from 'art shared in inclusive way' to 'art shared in a way where every visitor feels they can take up space'

--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
 
 		<p>We want to challenge the way we consume art, both in galleries and across social media.</p>
 
-		<p>We want to see art shared in an inclusive way, where every visitor feels they can take up space and have a
+		<p>We want to see art shared in a way where every visitor feels they can take up space and have a
 			dialogue with the work. We want people to feel welcomed, not manipulated by algorithms, and able to think
 			outside of social barriers in the physical world.</p>
 
