Considerable refactoring of tapestry room CSS

--- a/tapestry/index.html
+++ b/tapestry/index.html
@@ -32,37 +32,37 @@
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
 
 	<div id="wrapper">
-		<div class="slide">
+		<div class="artboard">
 			<a href="/reflections/reflection4.html" class="ig-link ig-room-link ig-previous-room ig-dark-link">
 				<img src="/graphics/arrows/arrowdark.png" alt="This way" class="ig-room-arrow">
 				Previous room
 			</a>
-			<div id="ab1_entrance"></div>
-			<div id="ab1_medium_frame"></div>
+			<div class="artboard-item" id="ab1_entrance"></div>
+			<div class="artboard-item" id="ab1_medium_frame"></div>
 		</div>
-		<div class="slide">
-			<div id="ab2_medium_rectangle_vertical_frame_1"></div>
-			<div id="ab2_split_frame_1"></div>
-			<div id="ab2_medium_frame"></div>
-			<div id="ab2_split_frame_2"></div>
-			<div id="ab2_medium_rectangle_vertical_frame_2"></div>
+		<div class="artboard">
+			<div class="artboard-item" id="ab2_medium_rectangle_vertical_frame_1"></div>
+			<div class="artboard-item" id="ab2_split_frame_1"></div>
+			<div class="artboard-item" id="ab2_medium_frame"></div>
+			<div class="artboard-item" id="ab2_split_frame_2"></div>
+			<div class="artboard-item" id="ab2_medium_rectangle_vertical_frame_2"></div>
 		</div>
-		<div class="slide">
-			<div id="ab3_birds"></div>
-			<div id="ab3_large_frame"></div>
+		<div class="artboard">
+			<div class="artboard-item" id="ab3_birds"></div>
+			<div class="artboard-item" id="ab3_large_frame"></div>
 		</div>
-		<div class="slide">
-			<div id="ab4_medium_square_frame"></div>
-			<div id="ab4_medium_rectangle_frame_1"></div>
-			<div id="ab4_storage_cupboard"></div>
-			<div id="ab4_medium_rectangle_frame_2"></div>
+		<div class="artboard">
+			<div class="artboard-item" id="ab4_medium_square_frame"></div>
+			<div class="artboard-item" id="ab4_medium_rectangle_frame_1"></div>
+			<div class="artboard-item" id="ab4_storage_cupboard"></div>
+			<div class="artboard-item" id="ab4_medium_rectangle_frame_2"></div>
 		</div>
-		<div class="slide">
-			<div id="ab5_medium_square_frame"></div>
-			<div id="ab5_button_elements">
-				<div id="ab5_reverse_big_star"></div>
-				<div id="ab5_back_to_top" onclick="scrollToFront(event)"></div>
-				<div id="ab5_next_room">
+		<div class="artboard">
+			<div class="artboard-item" id="ab5_medium_square_frame"></div>
+			<div class="artboard-item" id="ab5_button_elements">
+				<div class="artboard-item" id="ab5_reverse_big_star"></div>
+				<button class="artboard-item" id="ab5_back_to_top" onclick="scrollToFront(event)">Back to top</button>
+				<div class="artboard-item" id="ab5_next_room">
 					<a href="/gallery-hang" class="ig-link ig-room-link ig-next-room ig-dark-link">
 						Next room
 						<img src="/graphics/arrows/arrowdark.png" alt="This way" class="ig-room-arrow">
