221017_FRAME1_HOUSEPLANT_PAINTING
Adding additional frame and houseplant painting to test application of code.

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -68,6 +68,20 @@
                 </div>
             </div>
 
+            <div class="artwork-hang" style="left: 400px; top: 150px;" onclick="onArtworkClicked(event)">
+                <div class="artwork-container">
+                    <img class="artwork" style="width: 185px; height: 320px; left: 30px; top: 30px;"
+                    src="../gallery-hang/graphics/houseplant_painting.jpg">
+                    <img class="artwork-frame" style="width: 253px;"
+                        src="../graphics/Frames/frame1.png">
+                </div>
+                <div class="artwork-text">
+                    <h2>Artwork #2</h2>
+                    <p>Artwork #2 is a beautiful work of art by a very complicated artist who is very smart and full of
+                        brains and creativity.</p>
+                </div>
+            </div>
+
 
         </div>
 
