--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -68,6 +68,31 @@
                 </div>
             </div>
 
+            <div class="artwork-hang" style="left: 500px; top: 50px;" onclick="onArtworkClicked(event)">
+                <div class="artwork-container">
+                    <img class="artwork" style="width: 185px; height: 320px; left: 30px; top: 30px;"
+                        src="../gallery-hang/graphics/houseplant_painting.jpg">
+                    <img class="artwork-frame" style="width: 253px;"
+                        src="../graphics/Frames/frame1.png">
+                </div>
+                <div class="artwork-text">
+                    <h2>Artwork #2</h2>
+                    <p>This is a test to see if I can get the painting to show up.</p>
+                </div>
+            </div>
+
+            <div class="artwork-hang" style="left: 100px; top: 50px;" onclick="onArtworkClicked(event)">
+                <div class="artwork-container">
+                    <img class="artwork" style="width: 185px; height: 320px; left: 30px; top: 30px;"
+                        src="../gallery-hang/graphics/houseplant_painting.jpg">
+                    <img class="artwork-frame" style="width: 253px;"
+                        src="../graphics/Frames/frame3.png">
+                </div>
+                <div class="artwork-text">
+                    <h2>Artwork #2</h2>
+                    <p>I want the frame to show on the top left of the screen.</p>
+                </div>
+            </div>
 
         </div>
 
