--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -41,49 +41,181 @@
 
         <div class="container gallery-container">
 
-            <div class="artwork-hang" style="left: 90px; top: 30px;" onclick="onArtworkClicked(event)">
-                <div class="artwork-container">
-                    <img class="artwork" style="width: 250px; height: 300px; left: 40px; top: 38px;"
-                        src="http://placekitten.com/g/250/300">
-                    <img class="artwork-frame" style="width: 328px;" src="../graphics/Frames/Gold_2_Dark.png">
+            <div class="artwork-hang" style="left: 100px; top: 30px;" onclick="onArtworkClicked(event)">
+                    <div class="artwork-container">
+                        <img class="artwork" style="width: 222px; height: 384px; left: 30px; top: 30px;"
+                            src="../gallery-hang/graphics/">
+                        <img class="artwork-frame" style="width: 330px;"
+                            src="../graphics/Frames/frame3.png">
+                    </div>
+                    <div class="artwork-text">
+                        <h2>Artwork #2</h2>
+                        <p>FRAME3 - TOP LEFT.</p>
+                    </div>
                 </div>
-                <div class="artwork-text">
-                    <h2>Artwork #1</h2>
-                    <p>Although you may be looking at Artwork #1 and thinking "Wow, that is such a great artwork", you
-                        should really see artwork #2. It's way better than Artwork #1 in basically every way.</p>
-                </div>
-                <div class="artwork-close-button">(X)</div>
-            </div>
 
-            <div class="artwork-hang" style="left: 500px; top: 50px;" onclick="onArtworkClicked(event)">
+            </div>
+            <div class="artwork-close-button">(X)</div>
+        </div>
+    
+                <div class="artwork-hang" style="left: 480px; top: 180px;" onclick="onArtworkClicked(event)">
+                    <div class="artwork-container">
+                        <img class="artwork" style="width: 185px; height: 320px; left: 30px; top: 30px;"
+                            src="../gallery-hang">
+                        <img class="artwork-frame" style="width: 253px;"
+                            src="../graphics/Frames/frame13.png">
+                    </div>
+                    <div class="artwork-text">
+                        <h2>Artwork #2</h2>
+                        <p>FRAME 13 - TOP SECOND FROM LEFT.</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="artwork-close-button">(X)</div>
+        </div>
+    
+                <div class="artwork-hang" style="left: 770px; top: 180px;" onclick="onArtworkClicked(event)">
+                    <div class="artwork-container">
+                        <img class="artwork" style="width: 185px; height: 320px; left: 30px; top: 30px;"
+                            src="../gallery-hang/graphics/">
+                        <img class="artwork-frame" style="width: 125px;"
+                            src="../graphics/Frames/frame9.png">
+                    </div>
+                    <div class="artwork-text">
+                        <h2>Artwork #2</h2>
+                        <p>FRAME 9 - TOP SECOND FROM RIGHT.</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="artwork-close-button">(X)</div>
+        </div>
+
+            <div class="artwork-hang" style="left: 950px; top: 180px;" onclick="onArtworkClicked(event)">
                 <div class="artwork-container">
                     <img class="artwork" style="width: 185px; height: 320px; left: 30px; top: 30px;"
-                        src="http://placekitten.com/g/185/320">
+                        src="../gallery-hang/graphics/">
                     <img class="artwork-frame" style="width: 253px;"
-                        src="../graphics/Frames/Gold_4_Gold_Line.png">
+                        src="../graphics/Frames/frame15.png">
                 </div>
                 <div class="artwork-text">
                     <h2>Artwork #2</h2>
-                    <p>Artwork #2 is a beautiful work of art by a very complicated artist who is very smart and full of
-                        brains and creativity.</p>
+                    <p>FRAME 15 - TOP RIGHT.</p>
                 </div>
-                <div class="artwork-close-button">(X)</div>
             </div>
 
-            <div class="artwork-hang" style="left: 400px; top: 150px;" onclick="onArtworkClicked(event)">
+        </div>
+        <div class="artwork-close-button">(X)</div>
+    </div>
+
+            <div class="artwork-hang" style="left: 90px; top: 500px;" onclick="onArtworkClicked(event)">
                 <div class="artwork-container">
-                    <img class="artwork" style="width: 185px; height: 320px; left: 30px; top: 30px;"
-                    src="../gallery-hang/graphics/houseplant_painting.jpg">
-                    <img class="artwork-frame" style="width: 253px;"
+                    <img class="artwork" style="width: 140px; height: 180px; left: 30px; top: 30px;"
+                        src="../gallery-hang/graphics/houseplant_painting.jpg">
+                    <img class="artwork-frame" style="width: 180px;"
                         src="../graphics/Frames/frame1.png">
                 </div>
                 <div class="artwork-text">
                     <h2>Artwork #2</h2>
-                    <p>Artwork #2 is a beautiful work of art by a very complicated artist who is very smart and full of
-                        brains and creativity.</p>
+                    <p>FRAME 1 - BOTTOM LEFT.</p>
                 </div>
             </div>
 
+
+            <div class="artwork-hang" style="left: 250px; top: 750px;" onclick="onArtworkClicked(event)">
+                <div class="artwork-container">
+                    <img class="artwork" style="width: 140px; height: 180px; left: 30px; top: 30px;"
+                        src="../gallery-hang/graphics/">
+                    <img class="artwork-frame" style="width: 260px;"
+                        src="../graphics/Frames/RETURN_TO_EARTH.png">
+                </div>
+                <div class="artwork-text">
+                    <h2>Artwork #2</h2>
+                    <p>RETURN TO EARTH.</p>
+                </div>
+            </div>
+
+            <div class="artwork-hang" style="left: 1px; top: 730px;" onclick="onArtworkClicked(event)">
+                <div class="artwork-container">
+                    <img class="artwork" style="width: 140px; height: 180px; left: 30px; top: 30px;"
+                        src="../gallery-hang/graphics/">
+                    <img class="artwork-frame" style="width: 260px;"
+                        src="../graphics/Frames/cornice1.png">
+                </div>
+                <div class="artwork-text">
+                    <h2>Artwork #2</h2>
+                    <p>CORNICE 1.</p>
+                </div>
+            </div>
+
+            <div class="artwork-hang" style="left: 1200px; top: 450px;" onclick="onArtworkClicked(event)">
+                <div class="artwork-container">
+                    <img class="artwork" style="width: 140px; height: 180px; left: 30px; top: 30px;"
+                        src="../gallery-hang/graphics/">
+                    <img class="artwork-frame" style="width: 280px;"
+                        src="../graphics/Frames/cornice3.png">
+                </div>
+                <div class="artwork-text">
+                    <h2>Artwork #2</h2>
+                    <p>CORNICE 3.</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="artwork-close-button">(X)</div>
+    </div>
+
+            <div class="artwork-hang" style="left: 320px; top: 500px;" onclick="onArtworkClicked(event)">
+                <div class="artwork-container">
+                    <img class="artwork" style="width: 185px; height: 320px; left: 30px; top: 30px;"
+                        src="../gallery-hang/graphics/">
+                    <img class="artwork-frame" style="width: 150px;"
+                        src="../graphics/Frames/frame4.png">
+                </div>
+                <div class="artwork-text">
+                    <h2>Artwork #2</h2>
+                    <p>FRAME 4 - BOTTOM SECOND FROM LEFT.</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="artwork-close-button">(X)</div>
+    </div>
+
+            <div class="artwork-hang" style="left: 500px; top: 540px;" onclick="onArtworkClicked(event)">
+                <div class="artwork-container">
+                    <img class="artwork" style="width: 185px; height: 320px; left: 30px; top: 30px;"
+                        src="../gallery-hang/graphics/">
+                    <img class="artwork-frame" style="width: 280px;"
+                        src="../graphics/Frames/frame5.png">
+                </div>
+                <div class="artwork-text">
+                    <h2>Artwork #2</h2>
+                    <p>FRAME 5 - BOTTOM SECOND FROM RIGHT.</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="artwork-close-button">(X)</div>
+    </div>
+
+            <div class="artwork-hang" style="left: 820px; top: 540px;" onclick="onArtworkClicked(event)">
+                <div class="artwork-container">
+                    <img class="artwork" style="width: 185px; height: 180px; left: 30px; top: 30px;"
+                        src="../gallery-hang/graphics/">
+                    <img class="artwork-frame" style="width: 320px;"
+                        src="../graphics/Frames/frame7.png">
+                </div>
+                <div class="artwork-text">
+                    <h2>Artwork #2</h2>
+                    <p>FRAME 7 - BOTTOM RIGHT.</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="artwork-close-button">(X)</div>
+    </div>
 
         </div>
 
