fix hang room HTML issues

--- a/gallery-hang/index.html
+++ b/gallery-hang/index.html
@@ -39,9 +39,9 @@
             <button class="look-down-button" onclick="scrollToFloor(event)">Look down</button>
         </div>
 
-        <div class="container gallery-container">
+        <div class="gallery-container">
 
-            <div class="artwork-hang" style="left: 100px; top: 30px;" onclick="onArtworkClicked(event)">
+            <div class="artwork-hang" style="left: 40px; top: 70px;" onclick="onArtworkClicked(event)">
                     <div class="artwork-container">
                         <img class="artwork" style="width: 222px; height: 384px; left: 30px; top: 30px;"
                             src="../gallery-hang/graphics/">
@@ -52,12 +52,9 @@
                         <h2>Artwork #2</h2>
                         <p>FRAME3 - TOP LEFT.</p>
                     </div>
+                    <div class="artwork-close-button">(X)</div>
                 </div>
 
-            </div>
-            <div class="artwork-close-button">(X)</div>
-        </div>
-    
                 <div class="artwork-hang" style="left: 480px; top: 180px;" onclick="onArtworkClicked(event)">
                     <div class="artwork-container">
                         <img class="artwork" style="width: 185px; height: 320px; left: 30px; top: 30px;"
@@ -69,11 +66,8 @@
                         <h2>Artwork #2</h2>
                         <p>FRAME 13 - TOP SECOND FROM LEFT.</p>
                     </div>
+                    <div class="artwork-close-button">(X)</div>
                 </div>
-
-            </div>
-            <div class="artwork-close-button">(X)</div>
-        </div>
     
                 <div class="artwork-hang" style="left: 770px; top: 180px;" onclick="onArtworkClicked(event)">
                     <div class="artwork-container">
@@ -86,11 +80,8 @@
                         <h2>Artwork #2</h2>
                         <p>FRAME 9 - TOP SECOND FROM RIGHT.</p>
                     </div>
+                    <div class="artwork-close-button">(X)</div>
                 </div>
-
-            </div>
-            <div class="artwork-close-button">(X)</div>
-        </div>
 
             <div class="artwork-hang" style="left: 950px; top: 180px;" onclick="onArtworkClicked(event)">
                 <div class="artwork-container">
@@ -103,11 +94,8 @@
                     <h2>Artwork #2</h2>
                     <p>FRAME 15 - TOP RIGHT.</p>
                 </div>
+                <div class="artwork-close-button">(X)</div>
             </div>
-
-        </div>
-        <div class="artwork-close-button">(X)</div>
-    </div>
 
             <div class="artwork-hang" style="left: 90px; top: 500px;" onclick="onArtworkClicked(event)">
                 <div class="artwork-container">
@@ -120,6 +108,7 @@
                     <h2>Artwork #2</h2>
                     <p>FRAME 1 - BOTTOM LEFT.</p>
                 </div>
+                <div class="artwork-close-button">(X)</div>
             </div>
 
 
@@ -134,6 +123,7 @@
                     <h2>Artwork #2</h2>
                     <p>RETURN TO EARTH.</p>
                 </div>
+                <div class="artwork-close-button">(X)</div>
             </div>
 
             <div class="artwork-hang" style="left: 1px; top: 730px;" onclick="onArtworkClicked(event)">
@@ -147,6 +137,7 @@
                     <h2>Artwork #2</h2>
                     <p>CORNICE 1.</p>
                 </div>
+                <div class="artwork-close-button">(X)</div>
             </div>
 
             <div class="artwork-hang" style="left: 1200px; top: 450px;" onclick="onArtworkClicked(event)">
@@ -160,11 +151,8 @@
                     <h2>Artwork #2</h2>
                     <p>CORNICE 3.</p>
                 </div>
+                <div class="artwork-close-button">(X)</div>
             </div>
-
-        </div>
-        <div class="artwork-close-button">(X)</div>
-    </div>
 
             <div class="artwork-hang" style="left: 320px; top: 500px;" onclick="onArtworkClicked(event)">
                 <div class="artwork-container">
@@ -177,11 +165,8 @@
                     <h2>Artwork #2</h2>
                     <p>FRAME 4 - BOTTOM SECOND FROM LEFT.</p>
                 </div>
+                <div class="artwork-close-button">(X)</div>
             </div>
-
-        </div>
-        <div class="artwork-close-button">(X)</div>
-    </div>
 
             <div class="artwork-hang" style="left: 500px; top: 540px;" onclick="onArtworkClicked(event)">
                 <div class="artwork-container">
@@ -194,11 +179,8 @@
                     <h2>Artwork #2</h2>
                     <p>FRAME 5 - BOTTOM SECOND FROM RIGHT.</p>
                 </div>
+                <div class="artwork-close-button">(X)</div>
             </div>
-
-        </div>
-        <div class="artwork-close-button">(X)</div>
-    </div>
 
             <div class="artwork-hang" style="left: 820px; top: 540px;" onclick="onArtworkClicked(event)">
                 <div class="artwork-container">
@@ -211,11 +193,8 @@
                     <h2>Artwork #2</h2>
                     <p>FRAME 7 - BOTTOM RIGHT.</p>
                 </div>
+                <div class="artwork-close-button">(X)</div>
             </div>
-
-        </div>
-        <div class="artwork-close-button">(X)</div>
-    </div>
 
         </div>
 
