Fix css clash in reflection room frames

--- a/reflections/reflection2.html
+++ b/reflections/reflection2.html
@@ -32,17 +32,17 @@
 	<script type="text/javascript" src="/shared/menu/menu.js"></script>
 
     <div id="content">
-        <div class="container one">
+        <div class="reflection-container one">
             <div class="frame" id="frame1"></div>
         </div>
-        <div class="container two">
+        <div class="reflection-container two">
             <div class="frame" id="frame2"></div>
         </div>
-        <div class="container three">
+        <div class="reflection-container three">
             <div class="frame" id="frame3"></div>
             <a href="reflection1.html" id="previous" class="arrow"></a>
         </div>
-        <div class="container four">
+        <div class="reflection-container four">
             <div class="frame" id="frame4"></div>
             <a href="reflection3.html" class="arrow" id="next"></a>
         </div>
