--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -38,16 +38,16 @@
             Previous room
         </a>
 
-        <div class="container one">
+        <div class="reflection-container one">
             <div class="frame" id="frame1"></div>
         </div>
-        <div class="container two">
+        <div class="reflection-container two">
             <div class="frame" id="frame2"></div>
         </div>
-        <div class="container three">
+        <div class="reflection-container three">
             <div class="frame" id="frame3"></div>
         </div>
-        <div class="container four">
+        <div class="reflection-container four">
             <div class="frame" id="frame4"></div>
             <a href="reflection2.html" id="next"></a>
         </div>
