get the tapestry room nice and broken yeeeeeeeeah

--- a/tapestry/index.html
+++ b/tapestry/index.html
@@ -38,10 +38,24 @@
 				Previous room
 			</a>
 			<div class="artboard-item" id="ab1_entrance"></div>
-			<div class="artboard-item" id="ab1_medium_frame"></div>
+			<div class="artboard-item" id="ab1_medium_frame">
+				<div class="artwork">
+					<div class="frame"></div>
+				</div>
+				<span class="art-text">
+					Here is a truly amazing picture that is really cool
+				</span>
+			</div>
 		</div>
 		<div class="artboard">
-			<div class="artboard-item" id="ab2_medium_rectangle_vertical_frame_1"></div>
+			<div class="artboard-item" id="ab2_medium_rectangle_vertical_frame_1">
+				<div class="artwork">
+					<div class="frame"></div>
+				</div>
+				<span class="art-text">
+					Another great piece, here it is, yeyyyyyyy
+				</span>
+			</div>
 			<div class="artboard-item" id="ab2_split_frame_1"></div>
 			<div class="artboard-item" id="ab2_medium_frame"></div>
 			<div class="artboard-item" id="ab2_split_frame_2"></div>
@@ -69,6 +83,9 @@
 					</a>
 				</div>
 			</div>
+		</div>
+        <div id="tapestry-overlay" class="">
+			<p id="tapestry-art-text"></p>
 		</div>
 	</div>
 	<script type="text/javascript" src="tapestry.js"></script>
